@@ -1,12 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.108 2005/03/26 06:28:36 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.109 2005/03/26 07:54:18 codeman Exp $
 
 *GLI-0.01 (9 Feb 2004)
 
   25 Mar 2005; Preston Cody <codeman@gentoo.org>
   changed InstallProfile to remove is_uri check on kernel, stage, and portage
   URIs.  The blank uri check has been commented out.
+  ripped out error checking of set_services.  this is done by _add_to_runlevel.
   
   25 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
   set_stage_tarball_uri() doesn't raise an exception on a blank string.
